Add file transfer events saving to chat history.

--- a/core/src/main/resources/i18n/spark_i18n.properties
+++ b/core/src/main/resources/i18n/spark_i18n.properties
@@ -562,6 +562,17 @@ message.file.transfer.chat.window = File transfer request:
 message.file.transfer.file.too.big.error = The selected file is too big.\nThe maximum file size is {0} the selected file has {1}
 message.file.transfer.file.too.big.warning = The selected file is too big.\nProceed anyway?
 message.file.transfer.direrror.setdir = Click here to change the directory
+message.file.transfer.history.request.sent = Request for transfer file "{0}" ({1}) was sent to {2}.
+message.file.transfer.history.send.complete = File "{0}" was successfully sent to {1}.
+message.file.transfer.history.send.error = Sending file "{0}" to {1} failed.
+message.file.transfer.history.send.canceled = Sending file "{0}" to {1} canceled.
+message.file.transfer.history.contact.rejected = {1} rejected transfer request for file "{0}".
+message.file.transfer.history.request.received = Request for transfer file "{0}" ({1}) was received from {2}.
+message.file.transfer.history.you.rejected = You have rejected transfer request for file "{0}" from {1}.
+message.file.transfer.history.you.accepted = You have accepted transfer request for file "{0}" from {1}.
+message.file.transfer.history.receive.success = File "{0}" was successfully received from {1}.
+message.file.transfer.history.receive.failed = Receiving file "{0}" from {1} failed.
+message.file.transfer.history.receive.canceled = Receiving file "{0}" from {1} canceled.
 message.find.conference.services = Find conference services
 message.forbidden.error = Received a forbidden error from the server
 message.gateway.username.error = Username needs to be supplied
