--- a/core/src/main/resources/i18n/spark_i18n_ru_RU.properties
+++ b/core/src/main/resources/i18n/spark_i18n_ru_RU.properties
@@ -393,6 +393,17 @@ message.unable.to.send.file = Вы не можете послать файл {0}
 message.sending.file.to = Передаётся файл для {0}.
 message.you.have.sent = Вы послали файл для {0}.
 message.file.transfer.rejected = {0} не подтвердил передачу файла.
+message.file.transfer.history.request.sent = Запрос на передачу файла "{0}" ({1}) отправлен пользователю {2}.
+message.file.transfer.history.send.complete = Файл "{0}" был успешно передан пользователю {1}.
+message.file.transfer.history.send.error = Не удалось отправить файл "{0}" пользователю {1}.
+message.file.transfer.history.send.canceled = Отправка файла "{0}" пользователю {1} отменена.
+message.file.transfer.history.contact.rejected = {1} отклонил запрос на передачу файла "{0}".
+message.file.transfer.history.request.received = Запрос на передачу файла "{0}" ({1}) получен от {2}.
+message.file.transfer.history.you.rejected = Вы отклонили запрос на передачу файла "{0}" от {1}.
+message.file.transfer.history.you.accepted = Вы приняли запрос на передачу файла "{0}" от {1}.
+message.file.transfer.history.receive.success = Файл "{0}" успешно принят от {1}.
+message.file.transfer.history.receive.failed = Не удалось принять файл "{0}" от {1}.
+message.file.transfer.history.receive.canceled = Прием файла "{0}" от {1} отменен.
 message.disable.transport = Удалить учетные данные для {0}?
 message.register.transports = Регистрация доступных транспортов.
 message.enter.aim = Введите Ваше AIM имя и пароль.
