--- a/core/src/main/resources/i18n/spark_i18n_ru_RU.properties
+++ b/core/src/main/resources/i18n/spark_i18n_ru_RU.properties
@@ -147,7 +147,7 @@ checkbox.enable.emoticons = Разрешить смайлики
 checkbox.use.system.look.and.feel = Использовать темы (System Look And &Feel) (требуется перезапуск)
 checkbox.disable.prev.chat.history = Отключить показ предыдущих бесед в чате
 checkbox.use.hostname.as.resource = Использовать имя хоста в качестве ресурса
-checkbox.use.version.as.resource = спользовать версию Spark в качестве ресурса
+checkbox.use.version.as.resource = Использовать версию Spark в качестве ресурса
 
 
 label.change.password.to = Сменить пароль на
