SPARK-2190: Add option to auto-accept file transfers
This commit adds as setting (disabled by default) that will automatically accept a file transfer from a sender that is on the user's contact list (more specifically, that is subscribed to the presence of the local user).

--- a/core/src/main/resources/i18n/spark_i18n_nl.properties
+++ b/core/src/main/resources/i18n/spark_i18n_nl.properties
@@ -145,6 +145,8 @@ checkbox.tabs.on.top = &Conversatie tabs altijd vooraan (Herstart vereist)
 checkbox.use.compression = Gebruik &Compressie
 checkbox.use.proxy.server = Proxy &server gebruiken
 checkbox.window.to.front = &Breng venster naar voren
+checkbox.filetransfer.ibb.only = Uitsluitend In-Band Bytestreams
+checkbox.filetransfer.autoaccept.presence = Accepteer verzoeken van bekende contacten autoatisch
 
 group.chat.window.information = Conversatievenster informatie
 group.comma.delimited = Komma-gescheiden
