SPARK-2202: Add button to remove all saved passwords

--- a/core/src/main/resources/i18n/spark_i18n.properties
+++ b/core/src/main/resources/i18n/spark_i18n.properties
@@ -125,7 +125,7 @@ button.view.profile = View full profile
 button.view.tasklist = View task list
 button.check.validity = Check validity
 button.show.certificate = Show certificate
-
+button.delete.saved.passwords = Forget All Login Passwords
 
 table.column.certificate.subject = Subject
 table.column.certificate.validity = Validity
