SPARK-2214 fix login translations LT

--- a/core/src/main/resources/i18n/spark_i18n_lt.properties
+++ b/core/src/main/resources/i18n/spark_i18n_lt.properties
@@ -80,7 +80,7 @@ button.add.bookmark = Pridėti žymą
 button.add.service = Pridėti &tarnybą
 button.add.user = Pridėti a&bonentą
 button.add2 = Pri&dėti
-button.advanced = Prisij&ungimo nuostatos
+button.advanced = Nustaty&mai
 button.approve = Pa&tvirtinti
 button.bookmark.room = Pasižymėti kambarį
 button.browse = &Naršyti…
@@ -221,7 +221,7 @@ label.na = nėra irašo
 label.cell = Mobilus nr.
 label.work = Darbinis nr.
 label.home = Namų nr.
-label.accounts = Pas&kyra
+label.accounts = Pas&kyros
 label.add.conference.service = &Konferencijų tarnybos pridėjimas
 label.add.jid = &Pakviesti ir
 label.add.task = Pridedama užduotis
