SPARK-2214 fix translation FI

--- a/core/src/main/resources/i18n/spark_i18n_fi.properties
+++ b/core/src/main/resources/i18n/spark_i18n_fi.properties
@@ -75,7 +75,7 @@ action.select.all = Valitse kaikki
 
 button.create.account = &Lisää tili
 button.close = &Sulje
-button.advanced = &Lisäasetukset
+button.advanced = &Asetukset
 button.browse = &Selaa...
 button.browse2 = S&elaa...
 button.browse3 = Se&laa...
