SPARK-2214 fix translation PL

--- a/core/src/main/resources/i18n/spark_i18n_pl.properties
+++ b/core/src/main/resources/i18n/spark_i18n_pl.properties
@@ -81,7 +81,7 @@ button.add.bookmark = Dodaj zakładkę
 button.add.service = Dodaj usługę
 button.add.user = Dodaj użytkownika
 button.add2 = Dodaj
-button.advanced = Zaawansowane
+button.advanced = Ustawienia
 button.approve = Zatwierdź
 button.bookmark.room = Dodaj pokój
 button.browse = Przeglądaj
