--- a/core/src/main/resources/i18n/spark_i18n_ru_RU.properties
+++ b/core/src/main/resources/i18n/spark_i18n_ru_RU.properties
@@ -153,7 +153,7 @@ checkbox.notify.typing.systemtray = Оповещать когда пользов
 checkbox.notify.systemtray = Оповещать о новых сообщениях (системный трей)
 checkbox.permanent = Постоянная комната
 checkbox.play.sound.on.invitation = Проиграть звук при получении приглашения
-checkbox.play.sound.on.new.message = Проиграть звук при новом сообщении
+checkbox.play.sound.on.new.message = Проиграть звук при получении нового сообщения
 checkbox.play.sound.on.outgoing.message = Проиграть звук при отправке сообщения
 checkbox.play.sound.when.offline = Проиграть звук при отключении пользователя
 checkbox.private.room = Личная комната
