SPARK-2217 Update Russian translation
Small fix.

--- a/core/src/main/resources/i18n/spark_i18n_ru_RU.properties
+++ b/core/src/main/resources/i18n/spark_i18n_ru_RU.properties
@@ -452,7 +452,7 @@ menuitem.view.logs = Показать логи
 menuitem.view.profile = Показать профиль
 menuitem.view.room.info = Показать информацию о комнате
 menuitem.voice = Право голоса
-menuitem.show.offline.users = Показывать контакты не в сети
+menuitem.show.offline.users = Показывать пользователей не в сети
 menuitem.show.contact.statusmessage = Показать статус сообщение
 menuitem.bookmark.room = Добавить комнату в закладки
 menuitem.refresh = Обновить
@@ -510,7 +510,7 @@ message.connection.failed = Нет связи с {0}.
 message.create.account = Учетная запись не создана.
 message.create.or.join.room = Создать или войти в комнату
 message.current.status = Показывать другим Ваш статус.
-message.default.error = Обнаружена ошибка. Сообщите, пожалуйста, на  support@jivesoftware.com.
+message.default.error = Обнаружена ошибка.
 message.delete.all.history = Удалить всю историю?
 message.delete.confirmation = Действительно удалить {0}?
 message.disable.transport = Удалить учетные данные для {0}?
