--- a/core/src/main/resources/i18n/spark_i18n.properties
+++ b/core/src/main/resources/i18n/spark_i18n.properties
@@ -981,6 +981,11 @@ stun.border.label = STUN fallback server
 stun.server.addr = STUN Server:
 stun.server.port = STUN Port:
 
+##Text Field Hints
+hint.login.username = Enter Username
+hint.login.password = Enter Password
+hint.login.domain = Enter Domain(e.g igniterealtime.org)
+
 composing = {0} is typing...
 paused = {0} has stopped typing
 active = {0} is paying attention
