SPARK-2217 Update Russian translation

--- a/core/src/main/resources/i18n/spark_i18n_ru_RU.properties
+++ b/core/src/main/resources/i18n/spark_i18n_ru_RU.properties
@@ -981,6 +981,11 @@ stun.border.label = Запасной STUN сервер
 stun.server.addr = STUN сервер:
 stun.server.port = STUN порт:
 
+##Text Field Hints
+hint.login.username = Имя пользователя
+hint.login.password = Пароль
+hint.login.domain = Адрес сервера
+
 composing = {0} пишет...
 paused = {0} прекратил писать
 active = {0} обращает внимание
