--- a/core/src/main/resources/i18n/spark_i18n_lt.properties
+++ b/core/src/main/resources/i18n/spark_i18n_lt.properties
@@ -952,6 +952,17 @@ stun.border.label = STUN pagalbinis serveris
 stun.server.addr = Stun serveris:
 stun.server.port = Stun prievadas:
 
+##Text Field Hints
+hint.login.username = Enter Username
+hint.login.password = Enter Password
+hint.login.domain = Enter Domain(e.g igniterealtime.org)
+
+composing = {0} is typing...
+paused = {0} has stopped typing
+active = {0} is paying attention
+inactive = {0} is doing something else
+gone = {0} is doing something else
+
 action.viewlog = Peržiūrėti žurnalą
 
 dialog.confirm.to.reveal.visibility.title = Ar esat tikri?
