SPARK-2214 translate hints and chatstates

--- a/core/src/main/resources/i18n/spark_i18n.properties
+++ b/core/src/main/resources/i18n/spark_i18n.properties
@@ -982,15 +982,15 @@ stun.server.addr = STUN Server:
 stun.server.port = STUN Port:
 
 ##Text Field Hints
-hint.login.username = Enter Username
-hint.login.password = Enter Password
-hint.login.domain = Enter Domain(e.g igniterealtime.org)
+hint.login.username = Įveskite abonentą
+hint.login.password = Įveskite slaptažodį
+hint.login.domain = Įveskite domeną
 
-composing = {0} is typing...
-paused = {0} has stopped typing
-active = {0} is paying attention
-inactive = {0} is doing something else
-gone = {0} is doing something else
+composing = {0} rašo...
+paused = {0} nustojo rašyti
+active = {0} kreipia dėmesį
+inactive = {0} veikia kažką kitą
+gone = {0} pasitraukė
 
 #!#
 action.viewlog=View Log
