Fix gone chatstate string

--- a/core/src/main/resources/i18n/spark_i18n.properties
+++ b/core/src/main/resources/i18n/spark_i18n.properties
@@ -990,7 +990,7 @@ composing = {0} is typing...
 paused = {0} has stopped typing
 active = {0} is paying attention
 inactive = {0} is doing something else
-gone = {0} is doing something else
+gone = {0} has left
 
 #!#
 action.viewlog=View Log
