SPARK-2214 remove domain example

--- a/core/src/main/resources/i18n/spark_i18n.properties
+++ b/core/src/main/resources/i18n/spark_i18n.properties
@@ -984,7 +984,7 @@ stun.server.port = STUN Port:
 ##Text Field Hints
 hint.login.username = Enter Username
 hint.login.password = Enter Password
-hint.login.domain = Enter Domain(e.g igniterealtime.org)
+hint.login.domain = Enter Domain
 
 composing = {0} is typing...
 paused = {0} has stopped typing
