SPARK-2217 Update Russian translation

--- a/core/src/main/resources/i18n/spark_i18n_ru_RU.properties
+++ b/core/src/main/resources/i18n/spark_i18n_ru_RU.properties
@@ -64,7 +64,7 @@ user.has.signed.off = отключился.
 while.offline = Пока не в сети
 yes = Да
 
-action.clear=Отчистить
+action.clear=Очистить
 action.copy=Скопировать
 action.cut=Вырезать
 action.paste=Вставить
@@ -87,7 +87,7 @@ button.browse2 = Выбрать...
 button.browse3 = Выбрать..
 button.cancel = Отмена
 button.cert.info = Подробнее
-button.clear = Отчистить
+button.clear = Очистить
 button.close = Закрыть
 button.copy.to.clipboard=Скопировать в бувер обмена
 button.create.account = Создать учетную запись
