--- a/plugins/fastpath/src/main/resources/i18n/fastpath_i18n_es.properties
+++ b/plugins/fastpath/src/main/resources/i18n/fastpath_i18n_es.properties
@@ -57,7 +57,7 @@ label.notes = &Notas
 label.message.to.agent = Mensaje a un Agente
 label.select.agent = Seleccionar Agente
 label.title = &Titulo
-label.type = T&ipo
+label.type = &Tipo
 label.response = &Respuesta
 label.initial.response = &Respuesta Inicial
 
