--- a/plugins/fastpath/src/main/resources/i18n/fastpath_i18n.properties
+++ b/plugins/fastpath/src/main/resources/i18n/fastpath_i18n.properties
@@ -57,7 +57,7 @@ label.notes = &Notes
 label.message.to.agent = Message to agent
 label.select.agent = Select Agent
 label.title = &Title
-label.type = T&ype
+label.type = &Type
 label.response = &Response
 label.initial.response = &Initial Response
 
