--- a/plugins/fastpath/src/main/resources/i18n/fastpath_i18n_pt_BR.properties
+++ b/plugins/fastpath/src/main/resources/i18n/fastpath_i18n_pt_BR.properties
@@ -62,7 +62,7 @@ label.notes = &Notas
 label.message.to.agent = Mensagem para o atendente
 label.select.agent = Selecionar Atendente
 label.title = &Título
-label.type = T&ipo
+label.type = &Tipo
 label.response = &Resposta
 label.initial.response = &Resposta Inicial
 
