--- a/plugins/fastpath/src/main/resources/i18n/fastpath_i18n_de.properties
+++ b/plugins/fastpath/src/main/resources/i18n/fastpath_i18n_de.properties
@@ -57,7 +57,7 @@ label.notes = &Notizen
 label.message.to.agent = Nachricht an Agent
 label.select.agent = Agent auswählen
 label.title = &Titel
-label.type = &Typ
+label.type = T&yp
 label.response = Antwo&rt
 label.initial.response = Ursprüngl&iche Antwort
 
