--- a/plugins/fastpath/src/main/resources/i18n/fastpath_i18n_ru_RU.properties
+++ b/plugins/fastpath/src/main/resources/i18n/fastpath_i18n_ru_RU.properties
@@ -63,7 +63,7 @@ label.initial.response = &Начальный Ответ
 
 
 
-message.workgroup.logged.into = Вошел в рабочую группу {0}
+message.workgroup.logged.into = Logged into the {0} Workgroup
 message.incoming.request = {0}
 message.start.cobrowsing = Начните сеанс совместного просмотра со страницы {0}
 message.send.cobrowsing.message = Отправлено приглашение на совместный просмотр со страницей {0}
