--- a/plugins/roar/src/main/resources/i18n/roar_i18n_ru_RU.properties
+++ b/plugins/roar/src/main/resources/i18n/roar_i18n_ru_RU.properties
@@ -4,8 +4,8 @@
 roar.settings = Настройки Roar
 roar.enabled = Всплывающие окна включены
 roar.duration = Продолжительность в мс (0 = бесконечно):
-roar.amount = Максимальное количество всплывающих окон на экране (0 = бесконечно):
-roar.location = Изменить начальное местоположение всплывающего окна (требуется перезагрузка)
+roar.amount = Максимальное кол-во всп. окон на экране (0 = бесконечно):
+roar.location = Местоположение всп.окна (требуется перезагрузка)
 roar.display.topright = Правый верхнем
 roar.display.bottomright = Нижний правый
 roar.background = Фоновый цвет
@@ -21,16 +21,16 @@ roar.text.keyword = Ключевой цвета текста
 roar.single = Один пользователь
 roar.single.disable = Отключить Roar для однопользовательских чатов
 roar.group = Многопользовательский чат
-roar.group.different = Используйте разные настройки для многопользовательских чатов
+roar.group.different = Использовать разные настройки для многопользовательских чатов
 roar.group.disable = Отключить Roar для многопользовательских чатов
 roar.keyword = Ключевые соответствия
 roar.keyword.different = Использовать разные настройки для ключевых соответствия 
 roar.keyword.keyword = Ключевые слова (через запятую)
 
-roar.display.system = Уведомление операционной системы
+roar.display.system = Уведомления операционной системы
 
-roar.warning.topright = Пользовательский стиль уведомления Roar. Полностью настраиваемый.
-roar.warning.bottomright = Пользовательский стиль уведомления Roar. Полностью настраиваемый.
-roar.warning.toaster = Стиль уведомления Spark. Цвета <u>не</u> настраиваются.
-roar.warning.system = Уведомление, зависящее от системы. Цвета и продолжительность <u>не</u> настраиваются.
-roar.warning.system.mac = Использует Центр уведомлений (OS X 10.8 и выше).<br>Цвета и продолжительность <u>не</u> настраиваются.<br>См. "Системные настройки Mac" -&gt; Уведомления для дополнительных настроек.
+roar.warning.topright = Пользовательский стиль уведомления Roar
+roar.warning.bottomright = Пользовательский стиль уведомления Roar
+roar.warning.toaster = Стиль уведомления Spark. Цвета <u>НЕ</u> настраиваются.
+roar.warning.system = Уведомления от операционной системы, цвета и продолжительность <u>НЕ</u> настраиваются.
+roar.warning.system.mac = Использует Центр уведомлений (OS X 10.8 и выше).<br>Цвета и продолжительность <u>НЕ</u> настраиваются.<br>См. "Системные настройки Mac" -&gt; Уведомления для дополнительных настроек.
