convert national language characters to and from their Unicode equivalents in plain ASCII text
Native to ASCII(convert national language characters to and from their Unicode equivalents in plain ASCII text)
https://native2ascii.net/

--- a/core/src/main/resources/i18n/spark_i18n_nl.properties
+++ b/core/src/main/resources/i18n/spark_i18n_nl.properties
@@ -64,7 +64,7 @@ while.offline = Tijdens afwezigheid
 yes = Ja
 
 action.clear = Legen
-action.copy = Kopiren
+action.copy = Kopi\u0091ren
 action.cut = Knippen
 action.paste = Plakken
 action.print = Afdrukken
@@ -87,7 +87,7 @@ button.browse3 = Blad&eren...
 button.cancel = &Annuleren
 button.clear = &Legen
 button.close = S&luiten
-button.copy.to.clipboard = Naar Klembord kopiren
+button.copy.to.clipboard = Naar Klembord kopi\u0091ren
 button.create.account = &Account aanmaken
 button.create.room = &Maak of ga naar ruimte
 button.decline = &Weigeren
@@ -132,7 +132,7 @@ checkbox.play.sound.on.invitation = Geluid bij &ontvangen uitnodiging
 checkbox.play.sound.on.new.message = Geluid bij &nieuw bericht
 checkbox.play.sound.on.outgoing.message = Geluid bij &verzenden bericht
 checkbox.play.sound.when.offline = Geluid bij &afmelden gebruiker
-checkbox.private.room = P&rivéruimte
+checkbox.private.room = P&riv\u00e9ruimte
 checkbox.save.password = Wachtwoord &opslaan
 checkbox.show.avatars.in.contactlist = Toon &Avatars in Contactlijst
 checkbox.show.notifications.in.conference = Toon &meldingen in ruimtes
@@ -284,7 +284,7 @@ menuitem.languages = Talen
 menuitem.logout.no.status = Afmelden
 menuitem.logout.with.status = Afmelden met reden
 menuitem.lookup.profile = Profiel &opzoeken
-menuitem.copy.to = Kopiren naar
+menuitem.copy.to = Kopi\u0091ren naar
 menuitem.move.to = Verplaatsen naar
 menuitem.online.help = Spark Fora
 menuitem.open = Openen
@@ -352,7 +352,7 @@ message.buzz.sent = Melding naar gebruiker verstuurd.
 message.calling = Belt {0}
 message.came.online = {0} is online gekomen op {1}
 message.cannot.add.contact.to.shared.group = Er kunnnen geen contacten worden toegevoegd aan gedeelde groepen.
-message.chat.session.ended = Conversatie is geëindigd op {0}
+message.chat.session.ended = Conversatie is ge\u00ebindigd op {0}
 message.click.to.open = Klik om te openen
 message.client.information = Client informatie van {0}
 message.close.other.chats = Sluit alle andere conversaties
@@ -377,8 +377,8 @@ message.disconnected.error = De verbinding werd verbroken door een fout.
 message.disconnected.shutdown = De verbinding werd verbroken omdat de server uitgeschakeld werd.
 message.downloading = Bezig met downloaden van {0}
 message.downloading.spark.plug = Spark-Plug downloaden
-message.end.chat = Deze conversatie beëindigen?
-message.end.conversation = Deze sessie beëindigen?
+message.end.chat = Deze conversatie be\u00ebindigen?
+message.end.conversation = Deze sessie be\u00ebindigen?
 message.enter.aim = Geef AIM gebruikersnaam en wachtwoord.
 message.enter.broadcast.message = Bericht om aan geselecteerde gebruikers te versturen:
 message.enter.gtalk = Geef GTalk gebruikersnaam en wachtwoord.
@@ -436,11 +436,11 @@ message.offline = De gebruiker is niet aangemeld, maar zal het bericht ontvangen
 message.offline.error = De gebruiker zal niet in staat zijn om offline berichten te ontvangen.
 message.participants.in.room = Aanwezigen in ruimte
 message.password.error = Geef een wachtwoord op.
-message.password.private.room.error = Geef wachtwoord voor de privé ruimte.
+message.password.private.room.error = Geef wachtwoord voor de priv\u00e9 ruimte.
 message.passwords.no.match = Wachtwoorden komen niet overeen.
 message.please.join.in.conference = Doe mee aan mijn conferentie.
 message.plugins.not.available = Plugin server is onbereikbaar.
-message.prompt.plugin.uninstall = Plugin {0} deïnstalleren?
+message.prompt.plugin.uninstall = Plugin {0} de\u00efnstalleren?
 message.received.file = Bestand van {0} ontvangen.
 message.receiving.file = Bestand van {0} wordt ontvangen.
 message.reconnect.attempting = Herverbinden...
@@ -463,7 +463,7 @@ message.search.for.other.people = Andere personen zoeken op deze server
 message.search.service.not.available = De zoekdienst is onbereikbaar.
 message.searching.please.wait = Bezig met zoeken. Moment geduld a.u.b....
 message.select.add.room.to.add = Kies een ruimte om aan de dienstenlijst toe te voegen.
-message.select.one.or.more = Selecteer één of meer gebruikers in de contactlijst.
+message.select.one.or.more = Selecteer \u00e9\u00e9n of meer gebruikers in de contactlijst.
 message.select.room.to.enter = Geef ruimte om binnnen te gaan.
 message.select.room.to.join = Kies een ruimte om binnen te gaan.
 message.send.a.broadcast = Bericht versturen
@@ -555,8 +555,8 @@ tab.business = Zakelijk
 tab.conferences = Conferenties
 tab.contacts = Contacten
 tab.general = Algemeen
-tab.home = Priv
-tab.installed.plugins = Genstalleerde plugins
+tab.home = Priv\u008e
+tab.installed.plugins = Ge\u0095nstalleerde plugins
 tab.personal = Persoonlijk
 tab.proxy = Proxy
 
