--- a/plugins/fastpath/src/main/resources/i18n/fastpath_i18n_de.properties
+++ b/plugins/fastpath/src/main/resources/i18n/fastpath_i18n_de.properties
@@ -2,7 +2,7 @@ workgroup = Arbeitsgruppe
 join = Betreten
 logout = Abmelden
 cobrowsing.session = Co-Browsing-Sitzung
-back = Zurück
+back = Zur\u00fcck
 go = Go
 duration = Dauer
 agents = Agents
@@ -26,7 +26,7 @@ room = Raum
 message = Nachricht
 number.in.queue = # in der Warteschleife
 average.wait.time = Durchschnittliche Wartezeit
-last.queue.activity = Letzte Warteschleifen-Aktivität
+last.queue.activity = Letzte Warteschleifen-Aktivit\u00e4t
 query = Suche
 chat.with = Chat mit
 
@@ -45,21 +45,21 @@ button.edit.canned.responses = Vorgefertigte Antworten b&earbeiten
 button.start.cobrowsing.session = Co-Browsing-Sitzung starten
 button.save.note = Notiz &speichern
 button.new = &Neu
-button.delete = &Löschen
+button.delete = &L\u00f6schen
 button.save = &Speichern
 button.accept = &Annehmen
-button.reject = &Zurückweisen
+button.reject = &Zur\u00fcckweisen
 
 
 checkbox.allow.user.to.follow = Nutzer die Nachverfolgung erlauben
 
 label.notes = &Notizen
 label.message.to.agent = Nachricht an Agent
-label.select.agent = Agent auswählen
+label.select.agent = Agent ausw\u00e4hlen
 label.title = &Titel
 label.type = T&yp
 label.response = Antwo&rt
-label.initial.response = Ursprüngl&iche Antwort
+label.initial.response = Urspr\u00fcngl&iche Antwort
 
 
 
@@ -67,26 +67,26 @@ message.workgroup.logged.into = Angemeldet in der Arbeitsgruppe {0}
 message.incoming.request = {0}
 message.start.cobrowsing = Co-Browsing-Sitzung mit Seite {0} starten
 message.send.cobrowsing.message = Einladung zum Co-Browsing mit Seite {0} senden
-message.click.to.add.notes = Klicken Sie hier, um Notizen hinzuzufügen
-message.chat.notes = Chat-Notizen werden diesem Chat beigefügt und können über die Chat-Suche durchsucht werden.
+message.click.to.add.notes = Klicken Sie hier, um Notizen hinzuzuf\u00fcgen
+message.chat.notes = Chat-Notizen werden diesem Chat beigef\u00fcgt und k\u00f6nnen \u00fcber die Chat-Suche durchsucht werden.
 message.notes.updated = Notizen wurden aktualisiert
 message.unable.to.update.notes = Die Notiz konnte nicht gespeichert werden. Bitte versuchen Sie es erneut. 
 message.view.more.information = Weitere Informationen anzeigen...
-message.conversation.transferred = Das Gespräch wurde weitergeleitet
-message.invitation.rejected = Die Einladung zum Gespräch wurde von {0} zurückgewiesen
+message.conversation.transferred = Das Gespr\u00e4ch wurde weitergeleitet
+message.invitation.rejected = Die Einladung zum Gespr\u00e4ch wurde von {0} zur\u00fcckgewiesen
 message.please.join.me.in.conference = Bitte treten Sie der Konferenz bei.
-message.user.has.been.invited = {0} wurde in das Gespräch eingeladen.
+message.user.has.been.invited = {0} wurde in das Gespr\u00e4ch eingeladen.
 message.waiting.for.user = Warte auf {0}, den Transfer anzunehmen.
-message.transfering.to.user = Ich übergebe dieses Gespräch an Sie.
+message.transfering.to.user = Ich \u00fcbergebe dieses Gespr\u00e4ch an Sie.
 message.join.me.in.chat = Bitte betreten Sie diesen Chat.
-message.transfer.to.another.agent = Dieses Gespräch an einen anderen Agent, eine andere Arbeitsgruppe oder Warteschleife übergeben.
-message.invite.another.agent = Andere einladen, dieses Gespräch zu betreten.
-message.no.agent.selected.error = Es wurde kein Agent ausgewählt
-message.jid.invalid.error = Geben Sie eine gültige JID ein
+message.transfer.to.another.agent = Dieses Gespr\u00e4ch an einen anderen Agent, eine andere Arbeitsgruppe oder Warteschleife \u00fcbergeben.
+message.invite.another.agent = Andere einladen, dieses Gespr\u00e4ch zu betreten.
+message.no.agent.selected.error = Es wurde kein Agent ausgew\u00e4hlt
+message.jid.invalid.error = Geben Sie eine g\u00fcltige JID ein
 message.message.required.error = Geben Sie eine Nachricht ein
-message.specify.personal.macros = Geben Sie persönliche Makros an, die Sie in Chats mit Ihren Kunden verwenden können.
+message.specify.personal.macros = Geben Sie pers\u00f6nliche Makros an, die Sie in Chats mit Ihren Kunden verwenden k\u00f6nnen.
 message.macros.not.saved = Ihre Makros konnten nicht gespeichert werden.
-message.add.new.response = Neue Antwort hinzufügen
+message.add.new.response = Neue Antwort hinzuf\u00fcgen
 message.current.chats = Derzeitige Chats ({0})
 message.transcript.not.found.error = Abschrift konnte nicht gefunden werden
 message.incoming.chat.request = Eingehende Chat-Anfrage von {0}
@@ -95,12 +95,12 @@ message.user.left.room = {0} hat den Raum verlassen.
 message.not.specified = Nicht angegeben
 message.user.not.logged.in = Der Benutzer ist nicht bei der Arbeitsgruppe angemeldet.
 message.agent.is.not.in.chat = Agent ist derzeit in keinen Chats.
-message.find.previous.conversations = Geben Sie Text ein, den Sie in vorherigen Gesprächen finden möchten
+message.find.previous.conversations = Geben Sie Text ein, den Sie in vorherigen Gespr\u00e4chen finden m\u00f6chten
 
 menuitem.global.canned.responses = Globale vorgefertige Antworten
-menuitem.no.entries = Keine Einträge in der Kategorie
+menuitem.no.entries = Keine Eintr\u00e4ge in der Kategorie
 menuitem.join.chat = Chat betreten
-menuitem.monitor.chat = Chat überwachen
+menuitem.monitor.chat = Chat \u00fcberwachen
 
 tab.fastpath = Fastpath
 tab.current.chats = Derzeitige Chats
@@ -109,44 +109,44 @@ tab.user.info = Benutzerinfo
 tab.participants = Teilnehmer
 tab.user.history = Benutzerverlauf
 tab.notes = Notizen
-tab.queue.activity = Warteschleifen-Aktivität
+tab.queue.activity = Warteschleifen-Aktivit\u00e4t
 tab.transcript = Abschrift
 
-title.cobrowsing.for = Co-Browsing für {0}
+title.cobrowsing.for = Co-Browsing f\u00fcr {0}
 title.chat.notes = Chatnotizen
 title.notes = Notizen
-title.request.information = Informationen über die Anfrage
+title.request.information = Informationen \u00fcber die Anfrage
 title.information = Informationen
 title.transcript = Abschrift
 title.transfer = Transfer
 title.invitation = Einladung
 title.error = Fehler
 title.contact.list = Kontaktliste
-title.personal.macros = Persönliche Makros
+title.personal.macros = Pers\u00f6nliche Makros
 title.response.name = Name der Antwort
 title.response.text = Text der Antwort
-title.personal = Persönlich
+title.personal = Pers\u00f6nlich
 title.create.canned.response = Vorgefertigte Antwort erstellen
 title.previous.chats = Vorherige Chats
-title.personal.chats = Persönliche Chats
+title.personal.chats = Pers\u00f6nliche Chats
 title.chat.transcript = Chatabschrift
-title.current.active.conversations = Derzeitig aktive Gespräche
-title.number.of.active.conversations = # der aktiven Gespräche
-title.current.conversations = Derzeitige Gespräche
+title.current.active.conversations = Derzeitig aktive Gespr\u00e4che
+title.number.of.active.conversations = # der aktiven Gespr\u00e4che
+title.current.conversations = Derzeitige Gespr\u00e4che
 title.fastpath.invitation = Fastpath-Einladung
 title.fastpath.transfer = Fastpath-Weiterleitung
 title.workgroup = {0} Arbeitsgruppe
 title.chat.transcripts = Chat-Abschriften
 title.search.results = Suchergebnisse
 title.chat.transcripts.search = Chatabschrift-Suche
-title.number.of.conversations.found = # Gespräche gefunden:
+title.number.of.conversations.found = # Gespr\u00e4che gefunden:
 
 
 tooltip.allow.cobrowsing = Erlaubt dem aktuellen Besucher, die Browsernavigation zu verfolgen.
 tooltip.hide.cobrowsing = Browsernavigation dem aktuellen Besucher verbergen.
-tooltip.back.one.page = Eine Seite zurückgehen
-tooltip.push.url = Einen Link übergeben
-tooltip.push.current.page = Aktuelle URL dem Besucher übergeben
+tooltip.back.one.page = Eine Seite zur\u00fcckgehen
+tooltip.push.url = Einen Link \u00fcbergeben
+tooltip.push.current.page = Aktuelle URL dem Besucher \u00fcbergeben
 tooltip.save.transcript = Chatabschrift speichern
 tooltip.print.transcript = Chatabschrift drucken
 
