--- a/plugins/fastpath/src/main/resources/i18n/fastpath_i18n_pt_BR.properties
+++ b/plugins/fastpath/src/main/resources/i18n/fastpath_i18n_pt_BR.properties
@@ -1,49 +1,49 @@
 workgroup = Grupo de Trabalho
 join = Entrar
 logout = Logout
-cobrowsing.session = Iniciar Navegação
+cobrowsing.session = Iniciar Navega\u00e7\u00e3o
 back = Voltar
 go = Ir
-duration = Duração
+duration = Dura\u00e7\u00e3o
 agents = Atendentes
 date = Data
 invite.agent = Convites
 invite = Convidar
-transfer.to.agent = Transferências
-transfer = Transferência
+transfer.to.agent = Transfer\u00eancias
+transfer = Transfer\u00eancia
 workgroups = Grupos de Trabalho
 transfer.to = Transferir Para
 cancel = Cancelar
 agent  = Atendente
 visitor = Visitante
 email = Email
-question = Questão
-start.time = Tempo de Início
+question = Quest\u00e3o
+start.time = Tempo de In\u00edcio
 seconds = Segundos
 name = Nome
 from = De
 room = Sala
 message = Mensagem
 number.in.queue = # Em Espera
-average.wait.time = Tempo Médio de Espera
-last.queue.activity = Atividade da Última Fila
+average.wait.time = Tempo M\u00e9dio de Espera
+last.queue.activity = Atividade da \u00daltima Fila
 query = Consulta
 chat.with = Chat com
 # NOVO
-ask.assistance = Solicitar Assistência
+ask.assistance = Solicitar Assist\u00eancia
 queues = Filas
 
 button.logout = &Logout
-button.history = &Histórico
-button.conference = &Conferência
+button.history = &Hist\u00f3rico
+button.conference = &Confer\u00eancia
 button.macros = &Macros
 button.invite = &Convidar
-button.transfer = &Transferência
+button.transfer = &Transfer\u00eancia
 button.canned.responses = &Respostas Prontas
 button.end = &Fim
-button.co.browse = &Iniciar Navegação
+button.co.browse = &Iniciar Navega\u00e7\u00e3o
 button.edit.canned.responses = &Editar Respostas Prontas
-button.start.cobrowsing.session = Iniciar Navegação Conjunta
+button.start.cobrowsing.session = Iniciar Navega\u00e7\u00e3o Conjunta
 button.save.note = &Salvar Nota
 button.new = &Novo
 button.delete = &Deletar
@@ -54,14 +54,14 @@ button.reject = &Rejeitar
 button.invite.another.user = Convidar outro atendente para se unir a esta conversa
 button.transfer.conversation = Transferir Conversa para outro atendente
 button.end.conversation = Terminar Conversa
-button.start.cobrowse.user = Iniciar co-browsing com este usuário.
+button.start.cobrowse.user = Iniciar co-browsing com este usu\u00e1rio.
 
-checkbox.allow.user.to.follow = Permitir Usuário Seguir
+checkbox.allow.user.to.follow = Permitir Usu\u00e1rio Seguir
 
 label.notes = &Notas
 label.message.to.agent = Mensagem para o atendente
 label.select.agent = Selecionar Atendente
-label.title = &Título
+label.title = &T\u00edtulo
 label.type = T&ipo
 label.response = &Resposta
 label.initial.response = &Resposta Inicial
@@ -70,36 +70,36 @@ label.initial.response = &Resposta Inicial
 
 message.workgroup.logged.into = Logado no Grupo de Trabalho {0}
 message.incoming.request = {0}
-message.start.cobrowsing = Iniciar uma sessão de Co-Navegação com a página {0}
-message.send.cobrowsing.message = Enviado um convite de Co-Navegação com a página {0}
+message.start.cobrowsing = Iniciar uma sess\u00e3o de Co-Navega\u00e7\u00e3o com a p\u00e1gina {0}
+message.send.cobrowsing.message = Enviado um convite de Co-Navega\u00e7\u00e3o com a p\u00e1gina {0}
 message.click.to.add.notes = Clique aqui para adicionar notas.
-message.chat.notes = Anotações de Chat estão associadas a este chat e serão localizadas pela busca do chat.
+message.chat.notes = Anota\u00e7\u00f5es de Chat est\u00e3o associadas a este chat e ser\u00e3o localizadas pela busca do chat.
 message.notes.updated = Notas foram atualizadas.
 message.unable.to.update.notes = Incapaz de enviar nota. Por favor tente novamente.
-message.view.more.information = Ver mais informações...
-message.conversation.transferred = Esta conversação foi transferida.
+message.view.more.information = Ver mais informa\u00e7\u00f5es...
+message.conversation.transferred = Esta conversa\u00e7\u00e3o foi transferida.
 message.invitation.rejected = O convite de conversa foi rejeitado por {0}
-message.please.join.me.in.conference = Por favor junte-se a mim nesta conferência.
+message.please.join.me.in.conference = Por favor junte-se a mim nesta confer\u00eancia.
 message.user.has.been.invited = {0} foi convidado para se juntar a esta conversa.
-message.waiting.for.user = Aguardando por {0} para aceitar esta transferência.
-message.transfering.to.user = Eu estou transferindo esta conversa para você.
+message.waiting.for.user = Aguardando por {0} para aceitar esta transfer\u00eancia.
+message.transfering.to.user = Eu estou transferindo esta conversa para voc\u00ea.
 message.join.me.in.chat = Por favor participe comigo deste chat.
 message.transfer.to.another.agent = Transfira esta conversa para outro atendente, Grupo de Trabalho ou Fila.
 message.invite.another.agent = Convide outras pessoas para se juntar a esta conversa.
 message.no.agent.selected.error = Nenhum atendente foi selecionado
-message.jid.invalid.error = Deixe um JID válido
+message.jid.invalid.error = Deixe um JID v\u00e1lido
 message.message.required.error = Deixe uma mensagem
 message.specify.personal.macros = Especifique macros pessoais para uso em chats com seus cliente.
-message.macros.not.saved = Suas macros não poderão ser salvas.
+message.macros.not.saved = Suas macros n\u00e3o poder\u00e3o ser salvas.
 message.add.new.response = Adicionar nova resposta
 message.current.chats = Chats atuais ({0})
-message.transcript.not.found.error = Cópia não pode ser localizada
+message.transcript.not.found.error = C\u00f3pia n\u00e3o pode ser localizada
 message.incoming.chat.request = Pedido de Chat vindo de {0}
 message.user.joined.room = {0} se juntou a sala.
 message.user.left.room = {0} deixou a sala.
-message.not.specified = Não especificado
-message.user.not.logged.in = O usuário não está conectado ao Grupo de Trabalho.
-message.agent.is.not.in.chat = Atendente não está em nenhum bate-papo.
+message.not.specified = N\u00e3o especificado
+message.user.not.logged.in = O usu\u00e1rio n\u00e3o est\u00e1 conectado ao Grupo de Trabalho.
+message.agent.is.not.in.chat = Atendente n\u00e3o est\u00e1 em nenhum bate-papo.
 message.find.previous.conversations = Insira o texto para procurar em conversas anteriores.
 # Novo
 message.less.one.minute = menos de 1 minuto
@@ -112,20 +112,20 @@ menuitem.monitor.chat = Monitorar Chat
 tab.fastpath = Fastpath
 tab.current.chats = Chats Atuais
 tab.online.agents = Atendente Online
-tab.user.info = Informação de Usuário
+tab.user.info = Informa\u00e7\u00e3o de Usu\u00e1rio
 tab.participants = Participantes
-tab.user.history = Histórico de Usuário
+tab.user.history = Hist\u00f3rico de Usu\u00e1rio
 tab.notes = Notas
 tab.queue.activity = Atividade da Fila
-tab.transcript = Cópia
+tab.transcript = C\u00f3pia
 
-title.cobrowsing.for = Co-Navegação Para {0}
-title.chat.notes = Anotações do Chat
+title.cobrowsing.for = Co-Navega\u00e7\u00e3o Para {0}
+title.chat.notes = Anota\u00e7\u00f5es do Chat
 title.notes = Notas
-title.request.information = Pedido de Informação
-title.information = Informação
+title.request.information = Pedido de Informa\u00e7\u00e3o
+title.information = Informa\u00e7\u00e3o
 title.transcript = Transcript
-title.transfer = Transferência
+title.transfer = Transfer\u00eancia
 title.invitation = Convite
 title.error = Erro
 title.contact.list = Lista de Contato
@@ -136,26 +136,26 @@ title.personal = Pessoal
 title.create.canned.response = Criar resposta pronta
 title.previous.chats = Chats Anteriores
 title.personal.chats = Chats Pessoais
-title.chat.transcript = Cópia Chat
+title.chat.transcript = C\u00f3pia Chat
 title.current.active.conversations = Conversas Ativas Atuais
 title.number.of.active.conversations = # de conversas atuais
 title.current.conversations = Conversas Atuais
 title.fastpath.invitation = Convite
-title.fastpath.transfer = Transferência
+title.fastpath.transfer = Transfer\u00eancia
 title.workgroup = {0} Grupo de Trabalho
-title.chat.transcripts = Cópias de Chats
+title.chat.transcripts = C\u00f3pias de Chats
 title.search.results = Buscar Resultados
-title.chat.transcripts.search = Pesquisa Cópias de Chat
+title.chat.transcripts.search = Pesquisa C\u00f3pias de Chat
 title.number.of.conversations.found = # conversas encontradas:
 
 
-tooltip.allow.cobrowsing = Permite visitante atual seguir sua navegação.
-tooltip.hide.cobrowsing = Mostra a sua navegação ao visitante.
-tooltip.back.one.page = Voltar uma página
+tooltip.allow.cobrowsing = Permite visitante atual seguir sua navega\u00e7\u00e3o.
+tooltip.hide.cobrowsing = Mostra a sua navega\u00e7\u00e3o ao visitante.
+tooltip.back.one.page = Voltar uma p\u00e1gina
 tooltip.push.url = Envie um link
 tooltip.push.current.page = Envie a URL atual visitante
-tooltip.save.transcript = Salvar Cópia de Chat
-tooltip.print.transcript = Imprimir Cópia de Chat
+tooltip.save.transcript = Salvar C\u00f3pia de Chat
+tooltip.print.transcript = Imprimir C\u00f3pia de Chat
 
 # TO DO
 org.jivesoftware.fastpath.workspace.search
