--- a/plugins/flashing/src/main/resources/i18n/flashing_i18n_fr.properties
+++ b/plugins/flashing/src/main/resources/i18n/flashing_i18n_fr.properties
@@ -1,6 +1,7 @@
-title.flashing = Clignotement de la barre des tâches
+title.flashing = Clignotement de la barre des t\u00e2ches
 
 flashing.enable = &Activer le clignotement
 flashing.type = &Taper
 flashing.type.continuous = Continue
 flashing.type.temporary = Temporaire
+
